--- a/index.html
+++ b/index.html
@@ -39,29 +39,29 @@
             <div class="clearfix"></div>
           </section>
         </header>
-        <div id="popUp" class="loader hidden">
-          <a href="#" class="closePopUp">X</a>
-          <div class="container">
-            <h1>Article title here</h1>
-            <p>
-              Article description/content here.
-            </p>
-            <a href="#" class="popUpAction" target="_blank">Read more from source</a>
-          </div>
-        </div>
-        <section id="main" class="container">
 
+        <div id="popUp" class="hidden"></div>
 
-
-        </section>
+        <section id="main" class="container"></section>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script src='https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.5/handlebars.min.js'></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.3.min.js"><\/script>')</script>
         <script src="js/app.js"></script>
 
-        <script id="newsTemp" type="text/x-handlebars-template">
+        <script id="popUpTemp" type="text/x-handlebars-template">
+          <a href="#" class="closePopUp">X</a>
+          <div class="container">
+            <h1>{{content.title}}</h1>
+            <p>
+              {{content.description}}
+            </p>
+            <a href="#" class="popUpAction" target="_blank">Read more from source</a>
+          </div>
+        </script>
 
+
+        <script id="newsTemp" type="text/x-handlebars-template">
       <article class="article">
         <section class="featuredImage">
           <img src={{content.media.images.0.url}} alt="" />
@@ -77,9 +77,6 @@
         </section>
         <div class="clearfix"></div>
       </article>
-
-
-
     </script>
 
     </body>
