--- a/reddit.html
+++ b/reddit.html
@@ -23,10 +23,10 @@
             <a href="#"><h1>Feedr</h1></a>
             <nav>
               <ul>
-                <li><a href="#">News Source: Digg<span></span></a>
+                <li><a href="#">News Source: Reddit<span></span></a>
                   <ul>
-                      <li><a href="#" class="diggClick">Digg</a></li>
-                      <li><a href="reddit.html" class="redditClick">Reddit</a></li>
+                      <li><a href="index.html" class="diggClick">Digg</a></li>
+                      <li><a href="#" class="redditClick">Reddit</a></li>
                   </ul>
                 </li>
               </ul>
@@ -57,8 +57,8 @@
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.3.min.js"><\/script>')</script>
         <script src="js/app.js"></script>
 
-        <script id="newsTemp" type="text/x-handlebars-template">
-      <article class="article">
+        <!-- <script id="newsTemp" type="text/x-handlebars-template">
+      <article class="article hidden">
         <section class="featuredImage">
           <img src={{content.media.images.0.url}} alt="" />
         </section>
@@ -75,10 +75,10 @@
         </section>
         <div class="clearfix"></div>
       </article>
-    </script>
+    </script> -->
 
 
-    <!-- <script id="redditTemp" type="text/x-handlebars-template">
+    <script id="redditTemp" type="text/x-handlebars-template">
   <article class="article">
     <section class="featuredImage">
       <img src={{content.media.images.0.url}} alt="" />
@@ -94,7 +94,7 @@
     </section>
     <div class="clearfix"></div>
   </article>
-</script> -->
+</script>
 
     </body>
 </html>
