--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <li><a href="#">News Source: Digg<span></span></a>
                   <ul>
                       <li><a href="#" class="diggClick">Digg</a></li>
-                      <li><a href="reddit.html" class="redditClick">Reddit</a></li>
+                      <li><a href="reddit.html" class="redditClick">/r/gaming</a></li>
                   </ul>
                 </li>
               </ul>
