--- a/reddit.html
+++ b/reddit.html
@@ -23,10 +23,10 @@
             <a href="#"><h1>Feedr</h1></a>
             <nav>
               <ul>
-                <li><a href="#">News Source: Reddit<span></span></a>
+                <li><a href="#">News Source: /r/gaming<span></span></a>
                   <ul>
                       <li><a href="index.html" class="diggClick">Digg</a></li>
-                      <li><a href="#" class="redditClick">Reddit</a></li>
+                      <li><a href="#" class="redditClick">/r/gaming</a></li>
                   </ul>
                 </li>
               </ul>
